# MLExperiment

./: CMakeCache.txt  CMakeLists.txt  CPackConfig.cmake  CPackSourceConfig.cmake  Makefile  README.md  cifar_net.pth  cmake_install.cmake  flask_profiler.sql  main.cpp  package-lock.json  package.json
cpp_server/cache_line/: read_matrix  read_matrix.cpp
cpp_server/helloworld/: helloworld  helloworld.cpp  plusMinus  plusMinus.cpp  staircase  staircase.cpp
cpp_server/marketdata/: option.cpp
cpp_server/memory_alignment/: structure  structure.cpp
cpp_server/queue/: compare_exchange_strong.cpp  deadlock.cpp  fetch_add  fetch_add.cpp  lockfreeringbuffer.cpp  relaxed  relaxed.cpp  seq_cst.cpp
cpp_server/stack/: lock_free_stack  lock_free_stack.cpp
env/: pyvenv.cfg
idls/: streaming.proto
java_websocket_server/src/: Main.java
java_websocket_server_maven/: pom.xml
protoc/: hello.proto  hello_pb2.py  hello_pb2_grpc.py  loader.proto  loader_pb2.py  loader_pb2.pyi  loader_pb2_grpc.py  streaming_pb2.py  streaming_pb2.pyi  streaming_pb2_grpc.py  trainer.proto  trainer_pb2.py  trainer_pb2.pyi  trainer_pb2_grpc.py
python_rest_server/: main.py
python_rest_server/common/: mysql.py
python_rest_server/settings/us/: dev.py
python_rpc_server/: client.py  docker-compose.yaml  main.py  requirements.txt
python_rpc_server/models/: hello.py
python_rpc_server/settings/: __init__.py
react_frontend/: package-lock.json  package.json  tsconfig.json
react_frontend/src/: App.tsx
scripts/: run.sh
ts_frontend/: package-lock.json  package.json
ts_frontend/src/: app.ts
(+32 files in other folders)
